删除待播放列表